完成了JS的DOM封装

--- a/dom1/src/index.html
+++ b/dom1/src/index.html
@@ -9,6 +9,54 @@
 </head>
 
 <body>
+    <h3>增</h3>
+    <div id="test">我是test</div>
+
+    <hr>
+    <h3>删</h3>
+    <div id="two">11111</div>
+    <div id="two2">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+    </div>
+    <hr>
+    <h3>读写</h3>
+    <div id="there">
+        1111
+    </div>
+
+    <div id="cs">
+        class
+    </div>
+
+    <div id="jiantin">
+        事件监听
+    </div>
+
+    <div id="elements">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div id="t"></div>
+        <div>4 </div>
+    </div>
+
+    <div id="e">
+        <ul>
+            <li>213</li>
+            <li>213</li>
+            <li>213</li>
+            <li>213</li>
+        </ul>
+        <div>122131</div>
+        <div>122131</div>
+        <div>122131</div>
+        <div>122131</div>
+    </div>
+
 
     <script src="./dom.js"></script>
     <script src="./main.js"></script>
